--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@heroicons/react": "^2.1.5",
     "@telegram-apps/sdk-react": "^2.0.9",
     "dotenv": "^16.4.5",
-    "firebase": "^11.0.1",
-    "next": "15.0.1",
+    "firebase": "^11.10.0",
+    "next": "^15.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "telegraf": "^4.16.3"
